# migbot_apf_controller

./: CMakeLists.txt  README.md  package.xml
Dockerfile/: Dockerfile  run.sh
config/: param.yaml
launch/: avoidance_calculation.launch  detect_calc_avoid.launch  wrench.launch
scripts/: debug_plot.py  gazebo_scenario.py  wrench_calculator.py
